krator/tests/ui/state/next_must_be_state.stderr
error[E0277]: the trait bound `NotState: krator::State<PodState>` is not satisfied
  --> $DIR/next_must_be_state.rs:39:32
   |
LL |         Transition::next(self, NotState)
   |         ----------------       ^^^^^^^^ the trait `krator::State<PodState>` is not implemented for `NotState`
   |         |
   |         required by a bound introduced by this call
   |
   = help: the following other types implement trait `krator::State<S>`:
             <Stub as krator::State<ResourceState>>
             <TestState as krator::State<PodState>>
note: required by a bound in `Transition::<S>::next`
  --> $SRC_DIR/src/state.rs:43:33
   |
LL |     pub fn next<I: State<S>, O: State<S>>(_i: Box<I>, o: O) -> Transition<S>
   |                                 ^^^^^^^^ required by this bound in `Transition::<S>::next`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
